# parallax

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  notify-slack.yml
docs/: RULES.md
docs/assets/: how-it-works.mmd
docs/integrations/: claudecode.md  codex.md  openclaw.md
integrations/claudecode/: Cargo.toml  package.json  settings.json
integrations/claudecode/src/: lib.rs  main.rs  notification.ts  post_tool_use.ts  pre_tool_use.ts
integrations/codex/: Cargo.toml
integrations/codex/src/: lib.rs  main.rs
integrations/openclaw/src/: index.ts
rules/regex/: secrets.yaml
src/: main.rs
src/evaluators/: cel_eval.rs  pattern_eval.rs  regex_eval.rs  sigma_eval.rs  sql_eval.rs
src/integrations/: claudecode.rs  codex.rs  mod.rs
src/server/: api.rs
