[package]
name = "parallax-codex-hooks"
version = "0.4.0"
edition = "2021"
description = "Codex CLI lifecycle hook binary for Parallax security integration"

[lib]
name = "parallax_codex_hooks"
path = "src/lib.rs"

[[bin]]
name = "parallax-codex-hooks"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
